fixes tab and whitespace behavior, changes logo

--- a/src/css/FocusEditor.css
+++ b/src/css/FocusEditor.css
@@ -218,6 +218,7 @@ focus-editor {
       color: currentColor;
       text-decoration: none;
       transition: text-decoration var(--transition-duration);
+      display: inline-block;
       span {
         color: var(--color-grey-lighter);
       }
